Update to Java 27